criando rotas dos clientes
